--- a/dvc.yaml
+++ b/dvc.yaml
@@ -1,3 +1,60 @@
+# stages:
+#   data_ingestion:
+#     cmd: python src/cnnClassifier/pipeline/stage01_data_ingestion.py
+#     deps:
+#       - src/cnnClassifier/pipeline/stage01_data_ingestion.py
+#       - config/config.yaml
+#     outs:
+#       - artifacts/data_ingestion/CT-KIDNEY-DATASET-Normal-Cyst-Tumor-Stone
+
+#   prepare_base_model:
+#     cmd: python src/cnnClassifier/pipeline/stage02_prepare_base_model.py
+#     deps:
+#       - src/cnnClassifier/pipeline/stage02_prepare_base_model.py
+#       - config/config.yaml
+#     params:
+#       - IMAGE_SIZE
+#       - INCLUDE_TOP
+#       - CLASSES
+#       - WEIGHTS
+#       - LEARNING_RATE
+#     outs:
+#       - artifacts/prepare_base_model
+
+#   training:
+#     cmd: python src/cnnClassifier/pipeline/stage03_training.py
+#     deps:
+#       - src/cnnClassifier/pipeline/stage03_training.py
+#       - config/config.yaml
+#       - artifacts/data_ingestion/CT-KIDNEY-DATASET-Normal-Cyst-Tumor-Stone
+#       - artifacts/prepare_base_model
+#     params:
+#       - IMAGE_SIZE
+#       - EPOCHS
+#       - BATCH_SIZE
+#       - AUGMENTATION
+#     outs:
+#       - model/model.h5
+#   evaluation:
+#     cmd: python src/cnnClassifier/pipeline/stage04_model_evaluation.py
+#     deps:
+#       - src/cnnClassifier/pipeline/stage04_model_evaluation.py
+#       - config/config.yaml
+#       - artifacts/data_ingestion/CT-KIDNEY-DATASET-Normal-Cyst-Tumor-Stone
+#       - model/model.h5
+#     params:
+#       - IMAGE_SIZE
+#       - BATCH_SIZE
+#     metrics:
+#       - scores.json:
+#           cache: false
+
+
+
+# .dvc/config
+
+
+# dvc.yaml (Enhanced version)
 stages:
   data_ingestion:
     cmd: python src/cnnClassifier/pipeline/stage01_data_ingestion.py
@@ -5,7 +62,9 @@ stages:
       - src/cnnClassifier/pipeline/stage01_data_ingestion.py
       - config/config.yaml
     outs:
-      - artifacts/data_ingestion/CT-KIDNEY-DATASET-Normal-Cyst-Tumor-Stone
+      - artifacts/data_ingestion/CT-KIDNEY-DATASET-Normal-Cyst-Tumor-Stone:
+          cache: true
+          persist: true
 
   prepare_base_model:
     cmd: python src/cnnClassifier/pipeline/stage02_prepare_base_model.py
@@ -19,7 +78,9 @@ stages:
       - WEIGHTS
       - LEARNING_RATE
     outs:
-      - artifacts/prepare_base_model
+      - artifacts/prepare_base_model:
+          cache: true
+          persist: true
 
   training:
     cmd: python src/cnnClassifier/pipeline/stage03_training.py
@@ -34,7 +95,10 @@ stages:
       - BATCH_SIZE
       - AUGMENTATION
     outs:
-      - model/model.h5
+      - model/model.h5:
+          cache: true
+          persist: true
+
   evaluation:
     cmd: python src/cnnClassifier/pipeline/stage04_model_evaluation.py
     deps:
@@ -47,4 +111,7 @@ stages:
       - BATCH_SIZE
     metrics:
       - scores.json:
+          cache: false
+    plots:
+      - plots/training_history.json:
           cache: false
