--- a/.gitignore
+++ b/.gitignore
@@ -62,6 +62,12 @@ secrets.yaml
 *.tfstate
 *.tfstate.backup
 .terraform/
+.terraform.lock.hcl
+terraform.tfstate
+terraform.tfstate.backup
+*.tfvars
+*.tfplan
+
 
 # Docker
 .docker/
